# crypto3

./: README.md  pyproject.toml  requirements.txt
app/: config.py  main.py
app/api/: routes.py
app/core/: spreads.py  symbols.py
app/exchanges/: __init__.py  base.py  mock.py
app/models/: __init__.py  domain.py
app/services/: calculator.py  registry.py  state.py
tests/: test_api.py  test_spreads.py  test_symbols.py
